--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-	
+<!DOCTYPE html>	
 <html>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="description" content="personal website for experimenting wtih HTML CSS JS and PYTHON">
+		<meta name="author" content="Konstantinos Samlidis"
+		<meta name="keywords" content="Simple personal website">
+		
+	</head>
 	<h1>
 		Hey, I'm Cybernewfy
 	</h1>
@@ -9,7 +16,22 @@
 		</p>
 		<h2>What I'm working on</h2>
 		<p>
-			I am trying to learn Cyber Security, but I am interested in exploring various topics from programming to machine learning
+			I am trying to learn Cyber Security, but I am interested in exploring various topics from programming to machine learning.
+
+            So far programming is the hardest part of my second year of studies.
+            PYTHON, HTLM, CSS and JS. JS is by far the hardest
 		</p>
+        <h2>
+            The classes I have taken so far are the following
+            <dl>
+                <dt>
+                    First Year
+                </dt>
+                <dd>Introduction to computing and information technology 1</dd>
+                <dd>Discovering mathematics</dd>
+                <dd>Introduction to computing and information technology 2</dd>
+                <dd>Technologies in practice</dd>
+            </dl>>
+        </h2>
 	<body>
 <html>
