--- a/Simple_web_site.html
+++ b/Simple_web_site.html
@@ -30,17 +30,17 @@
 		<h2>What I'm working on</h2>
 		<p>
 			I am trying to learn Cyber Security, but I am interested in exploring various topics from programming to machine learning.
-        </p>
+        	</p>
         
-        <p>    
-            So far programming is the hardest part of my second year of studies.
-            PYTHON, HTLM, CSS and JS. JS is by far the hardest
+        	<p>    
+            	So far programming is the hardest part of my second year of studies.<br>
+            	PYTHON, HTLM, CSS and JS. JS is by far the hardest
 		</p>
-        <br>
-        <h4>
-            The classes I have taken so far are the following
-        </h4>
-            <dl>
+        	<br>
+        	<h4>
+            	The classes I have taken so far are the following
+       	 	</h4>
+            	<dl>
                 <dt>
                     First Year
                 </dt>
@@ -56,5 +56,5 @@
                 <dd>Web technologies</dd>
             </dl>
 
-        </body>
+	</body>
 </html>
