--- a/Simple_web_site.html
+++ b/Simple_web_site.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="personal website for experimenting wtih HTML CSS JS and PYTHON">
+		<meta name="description" content="personal website for experimenting with HTML CSS JS and PYTHON">
 		<meta name="author" content="Konstantinos Samlidis">
 		<meta name="keywords" content="simple personal website">
         <link rel="stylesheet" href="SimpleWebSiteStyle.css">
@@ -21,12 +21,12 @@
             <div class="audio-container">
                 <p>midnight-forest-184304 by Syouki_Takahashi</p>
                 <audio controls autoplay muted loop>
-                <source src="musc/midnight-forest-184304.mp3" type="audio/mpeg">
-                <source src="music/midnight-forest-184304.mp3" type="audio/ogg">
+                <source src="music/midnight-forest-184304.mp3" type="audio/mpeg">
+                <source src="music/midnight-forest-184304.ogg" type="audio/ogg">
                 </audio>
             </div>
         </header>
-		<h2>I am a PC hobbist and new around here </h2>
+		<h2>I am a PC hobbyist and new around here </h2>
 		<h2>What I'm working on</h2>
 		<p>
 			I am trying to learn Cyber Security, but I am interested in exploring various topics from programming to machine learning.
@@ -34,7 +34,7 @@
         
         	<p>    
             	So far programming is the hardest part of my second year of studies.<br>
-            	PYTHON, HTLM, CSS and JS. JS is by far the hardest
+            	PYTHON, HTML, CSS and JS. JS is by far the hardest
 		</p>
         	<br>
         	<h4>
@@ -56,5 +56,5 @@
                 <dd>Web technologies</dd>
             </dl>
 
-	</body>
+   </body>
 </html>
